# Bustout

./: .gitmodules  CMakeLists.txt  README.md  generate_win64.bat
assets/textures/: ball.aseprite  block.aseprite  button.aseprite  paddle_beam.aseprite  paddle_end.aseprite
src/: AnimatedSprite.cpp  Ball.cpp  Ball.h  BlockGrid.cpp  BlockGrid.h  CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  Layer.cpp  Layer.h  MainMenuScene.cpp  MainMenuScene.h  Paddle.cpp  Paddle.h  PowerUp.h  Scene.cpp  SceneManager.cpp  SceneManager.h  Sprite.cpp  Sprite.h  UIState.cpp  UIState.h  collision.cpp  collision.h  main.cpp  maths.h
src/debug/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.h
src/game/: Ball.cpp  Ball.h  Block.h  BlockGrid.cpp  BlockGrid.h  Bustout.cpp  Bustout.h  CMakeLists.txt  Paddle.cpp  Paddle.h  PowerUp.h  Shapes.h  collision.cpp  collision.h
src/gfx/: AnimatedSprite.h  CMakeLists.txt  Sprite.cpp  Sprite.h
src/scenes/: CMakeLists.txt  MainMenuScene.cpp  MainMenuScene.h  Scene.h  SceneManager.cpp  SceneManager.h
src/ui/: Button.cpp  Button.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Text.cpp  Text.h  UIElement.cpp  UIElement.h
